css/style.css
body,html{margin: 0;padding: 0;}
  /* STYLES SPECIFIC TO FOOTER  */
  .footer {
    width: 100%;

    /* position:fixed; */
    bottom: 0px;    
    height: 30%;
    background-color: #070617;
    padding: 10px 0 0 5px;

  }
  .footer .col {
    width: 30%;
    height: auto;
    float: left;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding: 0px 20px 20px 20px;
  }
  .contain{
      display: flex;
      flex-direction: row;
      box-sizing: border-box;
      justify-content: space-between;
      padding-right: 10%;
      
  }
  .f1{
      box-sizing: border-box;
      flex:2;
  }
  
  .f2{
      flex:1;
      text-align: right;
  }

  .footer .col h1 {
    margin: 0;
    padding: 0;
    font-family: inherit;
    font-size: 12px;
    line-height: 17px;
    padding: 20px 0px 5px 0px;
    color: #fff;
    font-weight: normal;
    text-transform: uppercase;
    letter-spacing: 0.250em;
  }
  .footer .col ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  .footer .col ul li {
    color: #fff;
    font-size: 14px;
    font-family: inherit;
    /* font-weight: bold; */
    padding: 5px 0px 5px 0px;
    cursor: pointer;
    transition: .2s;
    -webkit-transition: .2s;
    -moz-transition: .2s;
  }
  .social ul li {
    display: inline-block;
    padding-right: 5px !important;
  }
  
  .footer .col ul li:hover {
    color: #ffffff;
    transition: .1s;
    -webkit-transition: .1s;
    -moz-transition: .1s;
  }
  .clearfix {
    clear: both;
  }
  @media only screen and (min-width: 1280px) {
    .contain {
      width: 1200px;
      margin: 0 auto;
    }
  }
  @media only screen and (max-width: 1139px) {
    .contain .social {
      width: 1000px;
      display: block;
    }
    .social h1 {
      margin: 0px;
    }
  }
  @media only screen and (max-width: 950px) {
    .footer .col {
      width: 33%;
    }
    .footer .col h1 {
      font-size: 14px;
    }
    .footer .col ul li {
      font-size: 13px;
    }
  }
  @media only screen and (max-width: 500px) {
      .footer .col {
        width: 50%;
      }
      .footer .col h1 {
        font-size: 14px;
      }
      .footer .col ul li {
        font-size: 13px;
      }
  }
  @media only screen and (max-width: 340px) {
    .footer .col {
      width: 100%;
    }
  }


  .stay-in-touch-outer{
    background-color: rgb(231, 229, 229);
    height: 70vh;
    align-items: center;
    text-align: center;
    font-weight: bold;

    padding: 10% 0% 0% 0%;
  }

  .stay-in-touch-outer h1{
    font-size: 58pt;
    font-family: 'Alfa Slab One', cursive;
  }

  .stay-in-touch-outer p{
    font-size: 18pt;
  }

